# ctfdbg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/analysis/: auto.rs  cfg.rs  checksec.rs  crypto.rs  deobfuscate.rs  disasm.rs  entropy.rs  flow.rs  hints.rs  iocs.rs  mod.rs  rop.rs  stack.rs  symbols.rs  xref.rs
src/commands/: ast.rs  executor.rs  mod.rs  parser.rs
src/debugger/: backend.rs  breakpoint.rs  events.rs  expressions.rs  memory.rs  mod.rs  modules.rs  registers.rs  stacktrace.rs  state.rs  threads.rs
src/debugger/linux/: backend.rs  mod.rs  ptrace.rs
src/debugger/windows/: backend.rs  breakpoints.rs  context.rs  debug_loop.rs  memory.rs  mod.rs  modules.rs  process.rs  threads.rs
src/gui/: actions.rs  app.rs  docking.rs  mod.rs  state.rs  theme.rs
src/gui/dialogs/: adapter_settings.rs  add_breakpoint.rs  attach_process.rs  edit_condition.rs  hardware_breakpoint.rs  mod.rs  override_ip.rs
src/gui/panels/: breakpoints.rs  debugger_console.rs  debugger_info.rs  disassembly.rs  functions.rs  graph.rs  logs.rs  memory.rs  mod.rs  modules.rs  plugins.rs  registers.rs  stack.rs  stack_trace.rs  strings.rs  target_console.rs
src/gui/widgets/: address.rs  disasm_syntax.rs  hex_view.rs  mod.rs  sidebar.rs  tables.rs  (+2 more)
src/plugins/: builtins.rs  mod.rs
src/pwn/: asm.rs  calling_convention.rs  cyclic.rs  encoding.rs  fmtstr.rs  gadget.rs  hexdump.rs  mod.rs  netutil.rs  packing.rs  revshell.rs  ropchain.rs  search.rs  shellcode.rs  syscalls.rs  xor.rs
tests/: arch_support_tests.rs  command_parser_tests.rs  cyclic_tests.rs  deobfuscate_tests.rs  format_detect_tests.rs  hexdump_tests.rs  linux_backend_tests.rs  packing_tests.rs
