[package]
name = "ctfdbg"
version = "0.2.0"
edition = "2021"
authors = ["ctfdbg contributors"]
description = "ctfdbg - Windows-first graphical debugger for legal CTF, reverse engineering, and authorized exploit-development workflows"
license = "MIT OR Apache-2.0"
repository = ""
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
egui_dock = "0.14"
rfd = "0.15"

# Parsing / disassembly
goblin = "0.8"
capstone = "0.12"

# CLI / errors / logs
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Channels / sync
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Process listing for Attach dialog (cross-platform)
sysinfo = "0.32"

# Misc
hex = "0.4"
byteorder = "1"
once_cell = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_System_Console",
]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
